fixed handle click on studentinfo issue on firefox

--- a/src/styles/capstones.scss
+++ b/src/styles/capstones.scss
@@ -25,7 +25,7 @@
   margin-bottom: 7.5%;
   font-size: 1.25rem;
   line-height: 1.75rem;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.0.25rem;
   @include laptop{
     font-size: 0.8rem;
     line-height: 1.4rem;
@@ -87,6 +87,8 @@
     filter: none;
     opacity: 0.8;
     transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
   }
   .capstone-card-content{
     position: absolute;
