--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -185,6 +185,7 @@
       p{
         font-size: 0.8rem;
         line-height: 1.4rem;
+        margin: 0% 0% 15px 0%;
       }
       flex-direction: column;
       .left, .right{
