--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -11,10 +11,13 @@
     box-sizing: border-box;
     display: flex;
     justify-content: center;
+    @include mobile{
+        padding-bottom: 5%;
+    }
     .close-button{
-        position: absolute;
+        position: fixed;
         top: 5%;
-        right: 0%;
+        right: 5%;
         font-size: 3rem;
         cursor: pointer;
         color: $text;
@@ -87,12 +90,22 @@
         @include mobile{
             flex-direction: column;
             display: block;
+            margin-bottom: 5%;
+            h1{
+                font-size: 2.5rem;
+            }
+            p{
+                font-size: 0.8rem;
+                line-height: 1.4rem;
+            }
             .project-featured{
                 background-size: cover;
                 padding-bottom: 225px;
             }
+            .project-info{
+                margin: 0% 0% 50px 0%;
+            }
             .project-featured, .project-info{
-                margin: 0%;
                 width: 100%;
             }
         }
@@ -104,6 +117,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 2.5%;
         p{
             font-size: 0.9rem;
         }
